<?xml version="1.0"?>
<package format="2">
  <name>delivery_sim</name>
  <version>0.0.0</version>
  <description>The delivery_sim package</description>

  <maintainer email="vboxuser@todo.todo">vboxuser</maintainer>
  <license>MIT</license>

  <build_tool_depend>catkin</build_tool_depend>

  <!-- Зависимости для сборки проекта и генерации сервиса -->
  <build_depend>geometry_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>turtlesim</build_depend>
  <build_depend>message_generation</build_depend>

  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>turtlesim</build_export_depend>

  <!-- Зависимости для запуска проекта -->
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>turtlesim</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>
  </export>
</package>
